test/compiler/invalid_programs/classes/constant_infinite_size.jm
#!TypeError

class Infinite
  child:const Infinite
end
